--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,11 @@
 title: Nathan Chang 
 email: 
 url: "https://n8cha.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+# baseurl: ""
 github_username: n8cha 
 
 # Build settings
 remote_theme: n8cha/colorieretro
-plugins:
-  - jekyll-feed
-
-permalink: pretty
 
 collections:
   pages:
@@ -20,23 +17,3 @@ collections:
   projects:
     output: true
     permalink: /projects/:slug
-
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
