adding google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,8 @@ github_username: n8cha
 # Build settings
 remote_theme: n8cha/colorieretro
 
+google_analytics: UA-138155334-1
+
 collections:
   pages:
     output: true
