switch from UA to GA4 (analytics)

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ github_username: n8cha
 # Build settings
 remote_theme: n8cha/colorieretro
 
-google_analytics: UA-138155334-1
+google_analytics: G-ZW7YBBVWJ7 
 
 collections:
   pages:
